feat: update hbase api
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>