@@ -16,12 +16,11 @@
 package org.eclipse.jnosql.databases.hbase.communication;
 
 import org.eclipse.jnosql.communication.Settings;
-import org.eclipse.jnosql.communication.column.Column;
-import org.eclipse.jnosql.communication.column.ColumnDeleteQuery;
-import org.eclipse.jnosql.communication.column.ColumnEntity;
-import org.eclipse.jnosql.communication.column.ColumnManager;
-import org.eclipse.jnosql.communication.column.ColumnManagerFactory;
-import org.eclipse.jnosql.communication.column.ColumnQuery;
+import org.eclipse.jnosql.communication.semistructured.CommunicationEntity;
+import org.eclipse.jnosql.communication.semistructured.DatabaseManager;
+import org.eclipse.jnosql.communication.semistructured.DatabaseManagerFactory;
+import org.eclipse.jnosql.communication.semistructured.Element;
+import org.eclipse.jnosql.communication.semistructured.SelectQuery;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.EnabledIfSystemProperty;
@@ -30,10 +29,10 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.eclipse.jnosql.communication.column.ColumnDeleteQuery.delete;
-import static org.eclipse.jnosql.communication.column.ColumnQuery.select;
 import static org.eclipse.jnosql.communication.driver.IntegrationTest.MATCHES;
 import static org.eclipse.jnosql.communication.driver.IntegrationTest.NAMED;
+import static org.eclipse.jnosql.communication.semistructured.DeleteQuery.delete;
+import static org.eclipse.jnosql.communication.semistructured.SelectQuery.select;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -47,9 +46,9 @@ public class HBaseFamilyManagerTest {
     public static final String FAMILY = "person";
     public static final String ID_FIELD = HBaseUtils.KEY_COLUMN;
 
-    private ColumnManagerFactory managerFactory;
+    private DatabaseManagerFactory managerFactory;
 
-    private ColumnManager manager;
+    private DatabaseManager manager;
 
     @BeforeEach
     public void setUp() {
@@ -62,16 +61,16 @@ public class HBaseFamilyManagerTest {
 
     @Test
     public void shouldSave() {
-        ColumnEntity entity = createEntity();
+        var entity = createEntity();
         manager.insert(entity);
     }
 
     @Test
     public void shouldReturnErrorWhenKeyIsNotDefined() {
-        ColumnEntity entity = ColumnEntity.of(FAMILY);
-        entity.add(Column.of("id", "otaviojava"));
-        entity.add(Column.of("age", 26));
-        entity.add(Column.of("country", "Brazil"));
+        var entity = CommunicationEntity.of(FAMILY);
+        entity.add(Element.of("id", "otaviojava"));
+        entity.add(Element.of("age", 26));
+        entity.add(Element.of("country", "Brazil"));
         assertThrows(HBaseException.class, () -> manager.insert(entity));
     }
 
@@ -79,14 +78,14 @@ public class HBaseFamilyManagerTest {
     public void shouldFind() {
         manager.insert(createEntity());
 
-        ColumnQuery query = select().from(FAMILY).where(ID_FIELD).eq("otaviojava").build();
-        List<ColumnEntity> columnFamilyEntities = manager.select(query).collect(Collectors.toList());
+        var query = select().from(FAMILY).where(ID_FIELD).eq("otaviojava").build();
+        List<CommunicationEntity> columnFamilyEntities = manager.select(query).collect(Collectors.toList());
         assertNotNull(columnFamilyEntities);
         assertFalse(columnFamilyEntities.isEmpty());
-        ColumnEntity entity = columnFamilyEntities.get(0);
+        var entity = columnFamilyEntities.get(0);
         assertEquals(FAMILY, entity.name());
-        assertThat(entity.columns()).contains(Column.of(ID_FIELD, "otaviojava"),
-                Column.of("age", "26"), Column.of("country", "Brazil"));
+        assertThat(entity.elements()).contains(Element.of(ID_FIELD, "otaviojava"),
+                Element.of("age", "26"), Element.of("country", "Brazil"));
     }
 
     @Test
@@ -94,10 +93,10 @@ public class HBaseFamilyManagerTest {
         manager.insert(createEntity());
         manager.insert(createEntity2());
 
-        ColumnQuery query = select().from(FAMILY).where(ID_FIELD).eq("otaviojava")
+        var query = select().from(FAMILY).where(ID_FIELD).eq("otaviojava")
                 .or(ID_FIELD).eq("poliana").build();
 
-        List<ColumnEntity> entities = manager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entities = manager.select(query).collect(Collectors.toList());
         assertEquals(Integer.valueOf(2), Integer.valueOf(entities.size()));
 
     }
@@ -105,10 +104,10 @@ public class HBaseFamilyManagerTest {
     @Test
     public void shouldDeleteEntity() {
         manager.insert(createEntity());
-        ColumnQuery query = select().from(FAMILY).where(ID_FIELD).eq("otaviojava").build();
-        ColumnDeleteQuery deleteQuery = delete().from(FAMILY).where(ID_FIELD).eq("otaviojava").build();
+        var query = select().from(FAMILY).where(ID_FIELD).eq("otaviojava").build();
+        var deleteQuery = delete().from(FAMILY).where(ID_FIELD).eq("otaviojava").build();
         manager.delete(deleteQuery);
-        List<ColumnEntity> entities = manager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entities = manager.select(query).toList();
         assertTrue(entities.isEmpty());
     }
 
@@ -117,30 +116,30 @@ public class HBaseFamilyManagerTest {
         manager.insert(createEntity());
         manager.insert(createEntity2());
 
-        ColumnQuery query = select().from(FAMILY).where(ID_FIELD).eq("otaviojava")
+        SelectQuery query = select().from(FAMILY).where(ID_FIELD).eq("otaviojava")
                 .or(ID_FIELD).eq("poliana").build();
 
-        ColumnDeleteQuery deleteQuery = delete().from(FAMILY).where(ID_FIELD).eq("otaviojava")
+        var deleteQuery = delete().from(FAMILY).where(ID_FIELD).eq("otaviojava")
                 .or(ID_FIELD).eq("poliana").build();
 
         manager.delete(deleteQuery);
-        List<ColumnEntity> entities = manager.select(query).collect(Collectors.toList());
+        List<CommunicationEntity> entities = manager.select(query).collect(Collectors.toList());
         assertTrue(entities.isEmpty());
     }
 
-    private ColumnEntity createEntity() {
-        ColumnEntity entity = ColumnEntity.of(FAMILY);
-        entity.add(Column.of(ID_FIELD, "otaviojava"));
-        entity.add(Column.of("age", 26));
-        entity.add(Column.of("country", "Brazil"));
+    private CommunicationEntity createEntity() {
+        CommunicationEntity entity = CommunicationEntity.of(FAMILY);
+        entity.add(Element.of(ID_FIELD, "otaviojava"));
+        entity.add(Element.of("age", 26));
+        entity.add(Element.of("country", "Brazil"));
         return entity;
     }
 
-    private ColumnEntity createEntity2() {
-        ColumnEntity entity = ColumnEntity.of(FAMILY);
-        entity.add(Column.of(ID_FIELD, "poliana"));
-        entity.add(Column.of("age", 24));
-        entity.add(Column.of("country", "Brazil"));
+    private CommunicationEntity createEntity2() {
+        CommunicationEntity entity = CommunicationEntity.of(FAMILY);
+        entity.add(Element.of(ID_FIELD, "poliana"));
+        entity.add(Element.of("age", 24));
+        entity.add(Element.of("country", "Brazil"));
         return entity;
     }
 
